--- a/js/templates/menu.tpl.html
+++ b/js/templates/menu.tpl.html
@@ -1,6 +1,6 @@
 <nav class="menu">
     <ul>
-        <li><a href="#!">Main page</a></li>
+        <li><a href="#!/">Main page</a></li>
         <li><a href="#!search">Search</a></li>
         <li><a href="#!popular">Popular</a></li>
         <li><a href="#!trailers">Trailers</a></li>
