--- a/css/style.less
+++ b/css/style.less
@@ -89,9 +89,9 @@ body {
           text-align: center;
           font-size: 13px;
           position: absolute;
-          background: rgba(255, 255, 255, 0.8);
+          background: rgba(0, 0, 0, 0.8);
           z-index: 10;
-          color: #2F2F2F;
+          color: #fff;
           left: 50%;
           margin-left: -75px;
           bottom: 21px;
