--- a/js/templates/menu.tpl.html
+++ b/js/templates/menu.tpl.html
@@ -2,8 +2,7 @@
     <ul>
         <li><a href="#!/">Main page</a></li>
         <li><a href="#!search">Search</a></li>
-        <li><a href="#!popular">Popular</a></li>
-        <li><a href="#!trailers">Trailers</a></li>
+        <li><a href="#!soon">Soon</a></li>
         <li><a href="#!nowmovie">Now movie</a></li>
     </ul>
 </nav>
