--- a/js/templates/nowmoview_page.tpl.html
+++ b/js/templates/nowmoview_page.tpl.html
@@ -1,8 +1,11 @@
 <div>Now Movie list</div>
-<div data-ng-controller="nowMovieController as vm">
+<div data-ng-controller="nowMovieController as vm" class="container">
     <div class="item_film nowmovie" data-ng-repeat="film in vm.nowMovies">
         <figure>
-            <img ng-src="{{film.poster_path ? (img_uri150 + film.poster_path) : 'http://placehold.it/150x212'}}" alt="{{film.title}}"/>
+            <img data-id="{{film.id}}" ng-src="{{film.poster_path ? (img_uri150 + film.poster_path) : 'http://placehold.it/150x212'}}" alt="{{film.title}}"/>
         </figure>
+        <div class="item_film__title">{{film.title}}</div>
+        <div class="item_film__rating">{{film.vote_average}}</div>
+        <div class="item_film__release">{{film.release_date | limitTo: 4}}</div>
     </div>
 </div>
