--- a/js/templates/item_film.tpl.html
+++ b/js/templates/item_film.tpl.html
@@ -1,30 +1,38 @@
-<div class="film_container" data-ng-controller="itemFilmController">
+<div class="film_container" data-ng-controller="itemFilmController" ng-style="bgFilm">
     <div class="left_info">
         <figure>
-            <img ng-src="" alt=""/>
+            <img ng-src="{{image_uri150 + film.poster_path}}" alt=""/>
         </figure>
     </div>
     <div class="right_info">
         <table class="film_info">
             <tr>
-                <td>Content</td>
-                <td>Content</td>
+                <td>Название</td>
+                <td>film.title</td>
             </tr>
             <tr>
-                <td>Content</td>
-                <td>Content</td>
+                <td>Слоган</td>
+                <td>{{film.tagline}}</td>
             </tr>
             <tr>
-                <td>Content</td>
-                <td>Content</td>
+                <td>Описание</td>
+                <td>{{film.overview}}</td>
             </tr>
             <tr>
-                <td>Content</td>
-                <td>Content</td>
+                <td>Бюджет</td>
+                <td>{{((film.budget/1000000) + '$ млн') || 'Не указано'}}</td>
             </tr>
             <tr>
-                <td>Content</td>
-                <td>Content</td>
+                <td>Сайт фильма</td>
+                <td><a data-ng-href="{{film.homepage}} target='_blank'">{{film.title}}</a></td>
+            </tr>
+            <tr>
+                <td>Дата выхода</td>
+                <td>{{film.release_date}}</td>
+            </tr>
+            <tr>
+                <td>Фильм на IMDB</td>
+                <td><a data-ng-href="{{film.imdb_id}} target='_blank'">Перейти на IMDB</a></td>
             </tr>
         </table>
     </div>
