--- a/css/style.less
+++ b/css/style.less
@@ -73,8 +73,14 @@ body {
           height: 225px;
           background: #000;
           overflow: hidden;
+          &:hover {
+            outline: 5px solid #3FB93F;
+          }
           img {
             max-height: 100%;
+            &:hover {
+              cursor: pointer;
+            }
           }
         }
         display: inline-block;
@@ -114,5 +120,42 @@ body {
           border-radius: 0 0 5px 0;
         }
       }
+  }
+  .film_container {
+    margin: 0;
+    padding: 0;
+    .wrapper {
+      width: 60%;
+      padding: 15px;
+      margin: 50px auto;
+      background-color: rgba(255,255,255,.7);
+      .left_info, .right_info {
+        display: inline-block;
+        vertical-align: top;
+        margin: 10px;
+        padding: 5px;
+      }
+      .left_info {
+        width: 20%;
+      }
+      .right_info {
+        width: 70%;
+        table {
+          border-collapse: collapse;
+          td {
+            padding: 5px;
+            &:first-child {
+              width: 15%;
+            }
+            a {
+              color: steelblue;
+              &:hover {
+                color: #3FB93F;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
