--- a/js/templates/search.tpl.html
+++ b/js/templates/search.tpl.html
@@ -6,7 +6,7 @@
     <div class="results">
         <div class="item_film search" data-ng-cloak ng-repeat="film in searchRes track by $index">
             <figure>
-                <img data-ng-src="{{film.poster_path ? (img_uri150 + film.poster_path) : 'http://placehold.it/150x212'}}" alt="{{film.title}}"/>
+                <img data-id="{{film.id}}" data-ng-src="{{film.poster_path ? (img_uri150 + film.poster_path) : 'http://placehold.it/150x212'}}" alt="{{film.title}}"/>
             </figure>
             <div class="item_film__title">{{film.title}}</div>
             <div class="item_film__rating">{{film.vote_average}}</div>
