--- a/css/style.less
+++ b/css/style.less
@@ -124,11 +124,17 @@ body {
   .film_container {
     margin: 0;
     padding: 0;
+    position: absolute;
+    top: 68px;
+    bottom: 0;
+    left:0;
+    right: 0;
     .wrapper {
       width: 60%;
       padding: 15px;
       margin: 50px auto;
       background-color: rgba(255,255,255,.7);
+      border-radius: 40px 0 0 0;
       .left_info, .right_info {
         display: inline-block;
         vertical-align: top;
@@ -145,7 +151,7 @@ body {
           td {
             padding: 5px;
             &:first-child {
-              width: 15%;
+              width: 20%;
             }
             a {
               color: steelblue;
@@ -157,5 +163,8 @@ body {
         }
       }
     }
+  }
+  #video {
+    display: none;
   }
 }
