--- a/js/templates/item_film.tpl.html
+++ b/js/templates/item_film.tpl.html
@@ -38,7 +38,10 @@
             </table>
         </div>
         <div class="additional_info">
-            <show-trailer></show-trailer>
+            <p show-trailer>
+                <span>Смотреть трейлер</span>
+                <div id="video"></div>
+            </p>
         </div>
     </div>
 
